--- a/examples/Lecture35/after/index.html
+++ b/examples/Lecture35/after/index.html
@@ -85,9 +85,12 @@
         <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="" target="_blank">
+        <a href="https://goo.gl/maps/d47nPMctyJk" target="_blank">
           <div id="map-tile">
-            <span>map</span>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6765581218265!2d-76.71384018463584!3d39.363560579501396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1552342012126" 
+              width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <span>map</span>
+
           </div>
         </a>
       </div>
